syntax = "proto3";
package eshop;

service EshopService {
  rpc HelloWorld(HelloWorldRequest) returns (HelloWorldResponse) {}
  rpc HelloWorld2(HelloWorldRequest) returns (HelloWorldResponse) {}
}

message HelloWorldRequest { string name = 1; }
message HelloWorldResponse { string message = 1; }